fix: 🐛 add line break in li

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -189,3 +189,7 @@ code .line:last-child:empty::before {
   content: none;
   counter-increment: none;
 }
+
+li {
+  white-space: pre-wrap;
+}
